kubernetes/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cncfdemo-vs
  namespace: default
spec:
  hosts:
    - cncfdemo.platform.local
  gateways:
    - platform/platform-gateway
  http:
    - match:
      - uri:
          prefix: /api/
      - uri:
          exact: /api
      - uri:
          prefix: /swagger/
      - uri:
          exact: /swagger
      route:
      - destination:
          host: backend
          port:
            number: 8080
            
    - match:
      - uri:
          prefix: /
      - uri:
          exact: /
      route:
      - destination:
          host: frontend
          port:
            number: 8081
